src/objects/CSR_Activity_Code_Map__c.object
<CustomObject>
    <fields>
        <fullName>Activity_code_311Force__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity code 311Force</label>
        <referenceTo>Activity_Type__c</referenceTo>
        <relationshipLabel>CSR Activity Code Maps</relationshipLabel>
        <relationshipName>CSR_Activity_Code_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_Activity_Code__c</fullName>
        <label>CSR Activity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Activity_Name__c</fullName>
        <label>CSR Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_311Force_Code__c</fullName>
        <label>New 311Force Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Legacy_Code__c</fullName>
        <label>Old Legacy Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SRType_Code__c</fullName>
        <label>SRType Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Name__c</fullName>
        <label>SR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSR Activity Code Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SR_Name__c</columns>
        <columns>Old_Legacy_Code__c</columns>
        <columns>Activity_code_311Force__c</columns>
        <columns>NAME</columns>
        <columns>New_311Force_Code__c</columns>
        <columns>SRType_Code__c</columns>
        <columns>CSR_Activity_Code__c</columns>
        <columns>CSR_Activity_Name__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MapsrequireUpdate</fullName>
        <columns>CSR_Activity_Name__c</columns>
        <columns>SR_Name__c</columns>
        <columns>Old_Legacy_Code__c</columns>
        <columns>Activity_code_311Force__c</columns>
        <columns>NAME</columns>
        <columns>New_311Force_Code__c</columns>
        <columns>SRType_Code__c</columns>
        <columns>CSR_Activity_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>New_311Force_Code__c</field>
            <operation>equals</operation>
            <value>TestId</value>
        </filters>
        <label>Maps Requiring Update</label>
    </listViews>
    <nameField>
        <displayFormat>MAP-{000}</displayFormat>
        <label>Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSR Activity Code Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>